# Ai-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  seo-content-factory.skill
scripts/: demo_setup.py  seed_competitors.py  seed_keywords.py  test_crawl.py  test_generate.py
src/agents/ai_visibility/: agent.py  entity_optimizer.py  kyu_strategy.py  spioniro_client.py
src/agents/analytics/: agent.py  behavioral_analyzer.py  geo_metrics.py  position_tracker.py  (+2 more)
src/config/: constants.py  cost_config.py  settings.py
src/core/: approval_manager.py  base_agent.py  claude_client.py  event_bus.py  orchestrator.py  task_manager.py
src/dashboard/: app.py  deps.py
src/db/: session.py
src/models/: __init__.py  article.py  backlink.py  base.py  keyword.py  kpi.py  site_audit.py  task.py
src/schemas/: article.py  keyword.py  kpi.py  task.py
src/tools/: alerting.py  browser_automation.py  content_publisher.py  crawler.py  dzen_publisher.py  google_search_console.py  index_now.py  knowledge_graph.py  page_speed.py  spioniro_api.py  utm_constructor.py  wordstat_client.py  yandex_metrica.py  yandex_webmaster.py
src/workers/: celery_app.py  tasks.py
tests/: test_ab_testing.py  test_alerting.py  test_antidetect.py  test_auto_updater.py  test_constants.py  test_crawler.py  test_dzen_publisher.py  test_entity_optimizer.py  test_event_bus.py  test_geo_optimizer.py  test_knowledge_graph.py  test_platform_finder.py  test_schema_generator.py  test_seo_optimizer.py  test_templates.py  test_utm_constructor.py
(+26 files in other folders)
